db structure for events
Signed-off-by: Jeroen Keesom <jeroen.keesom@exsyn.com>

--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,7 +1,12 @@
 # Read the documentation: https://symfony.com/doc/master/bundles/FOSRestBundle/index.html
 fos_rest:
+    routing_loader:
+        default_format: json
+        include_format: true
     view:
         view_response_listener:  'force'
+        formats:
+            json: true
     format_listener:
         rules:
             - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json ] }
